add- segunda parte do section feita, resta mais 1 e depois terminar os outros divs dentro dos section

--- a/sap-2/index.html
+++ b/sap-2/index.html
@@ -25,7 +25,7 @@
             </div>
 
 
-                <img  id="itens" src="assets/imagens/mais-abas.png" alt="tabelas">
+                <img  id="maistabela" src="assets/imagens/mais-abas.png" alt="tabelas">
 
             </div>
 
@@ -51,7 +51,24 @@
 
          <div class="conteudo-g">
 
-        
+        <img id="loja"  src="assets/imagens/item-loja.png" alt="lojaa">
+
+            <div class="parte2">
+
+                <h1>Baseado em suas últimas compras</h1>
+
+            </div>
+
+            <div class="part2">
+                <h1>Ver todas as recomendações</h1>
+            </div>
+
+            <div>
+                <button class="mais">
+                    +
+
+                </button>
+            </div>
 
          </div>   
 
