ADD - Separacao do style

--- a/sap-1/index.html
+++ b/sap-1/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>sap-1</title>
 </head>
 
@@ -10,9 +10,10 @@
 
     <main>
 
-        <section>
+        <section id="">
+            <h1>Component Customizinf/SCMTMS/WDCC_FWD_ORDER, Main Page "$OTR:/SCMTMS/UI_FORWARDING_ORDER""</h1>
 
-            <div id="ladoalado">
+            <div id="botao">
                 <button>Save</button>
                 <button>❌Cancel</button>
                 <button>✏️Edit</button>
