add- fim da aula. faltou coisas

--- a/sap-2/index.html
+++ b/sap-2/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="../style.css">
     <title>sap-2</title>
 </head>
 <body>
@@ -51,7 +51,32 @@
 
          <div class="conteudo-g">
 
-        <img id="loja"  src="assets/imagens/item-loja.png" alt="lojaa">
+        <div>
+            <img class="imagem" src="assets/imagens/caderno.png" alt="fot">
+
+        </div>
+        <div>
+            <img class="imagem" src="assets/imagens/sap.png" alt="fot">
+
+        </div>
+        <div>
+            <img class="imagem" src="assets/imagens/grampeador.png" alt="fot">
+
+        </div>
+        <div>
+            <img class="imagem" src="assets/imagens/caneta.png" alt="fot">
+
+        </div>
+        <div>
+            <img class="imagem" src="assets/imagens/lapis.png" alt="fot">
+
+        </div>
+        <div>
+            <img class="imagem" src="assets/imagens/caderno-branco.png" alt="fot">
+
+        </div>
+
+
 
             <div class="parte2">
 
@@ -92,7 +117,9 @@
 
                 <h1>Status das últimas requisições</h1>
 
-            </div>
+            </div class="tprocessos" >
+
+        <h1>Ver todos os processos</h1>
 
          </div>
          
